@@ -1,3 +1,8 @@
+2007-07-15  Ben Motmans <ben.motmans@gmail.com>
+
+	* SqliteDialect.cs: dialect implementation with keyword detection
+	* SqliteDbFactory.cs: use SqliteDialect instead of the obsolete Sql99Dialect
+
 2007-07-14  Ben Motmans <ben.motmans@gmail.com>
 
 	* SqliteConnectionProvider.cs, SqliteDbFactory.cs, SqliteSchemaProvider.cs: small changes
